--- a/app/javascripts/components/application/award-type/style.css
+++ b/app/javascripts/components/application/award-type/style.css
@@ -1,12 +1,23 @@
 .award-type {
-  border: 1px solid #ccc;
+  background: white;
+  border: 3px solid #f2f2f2;
   cursor: pointer;
   border-radius: 2px;
+  opacity: 0.8;
   line-height: 0;
 }
 
-.award-type.selected {
-  border: 1px solid #666;
+.award-type.selected,
+.award-type.selected:hover,
+.award-type.selected:focus {
+  border: 3px solid #e7f4ff;
+  opacity: 1;
+}
+
+.award-type:hover,
+.award-type:focus {
+  border: 3px solid #e7e7e7;
+  opacity: 1;
 }
 
 .award-type__img {
