* get buttons in line with the rest of the look

--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -22,6 +22,10 @@ h6 {
   padding: 1rem 1.5rem !important;
 }
 
+.button {
+  font-family: "futura-pt";
+}
+
 .label {
   font-family: "futura-pt";
   letter-spacing: 1px;
