--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -1,3 +1,4 @@
+
 h1 {
   font-family: 'Josefin Sans', sans-serif !important;
 }
@@ -98,3 +99,6 @@ a.navbar-link.is-active {
 .hero.is-dark .subtitle {
   color: #888 !important;
 }
+
+
+@import '~bulma/bulma';
