* blank state message if user hasn't received any award yet

--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -1,103 +1,5 @@
-h1 {
-  font-family: 'Josefin Sans', sans-serif !important;
-}
-
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "futura-pt", sans-serif !important;
-}
-
-/* Need to find a way to override Bulma properly (ie no !importanté) */
-.navbar-item img {
-  max-height: 4rem !important;
-}
-
-a.navbar-item:hover,
-a.navbar-item.is-active,
-a.navbar-link:hover,
-a.navbar-link.is-active {
-  background: transparent !important;
-  color: #00b1c2 !important;
-}
-
-.button.is-dark:hover,
-.button.is-dark.is-hovered {
-  background: #111 !important;
-  color: white !important;
-}
-
-/* Need to find a way to override Bulma properly (ie no !importanté) */
-.button.is-primary {
-  background-color: #00b1c2 !important;
-}
-
-/* Need to find a way to override Bulma properly (ie no !importanté) */
-.section {
-  padding: 1rem 1.5rem !important;
-}
-
-.button,
-.label,
-.input,
-.navbar-item {
-  font-family: "futura-pt", sans-serif !important;
-}
-
-.label {
-  letter-spacing: 1px;
-}
-
-.input {
-  letter-spacing: 1px;
-}
-
-.input, .textarea {
-  border-radius: 0;
-}
-
-/* Need to find a way to override Bulma properly (ie no !importanté) */
-.textarea:not([rows]) {
-  max-height: 600px !important;
-  min-height: 70px !important;
-}
-
-.ivy-form {
-    background: #fcfcfc;
-    align-items: stretch;
-    /*border: 3px solid #f5f5f5;*/
-    /*border-radius: 3px;*/
-    /*border-top-left-radius: 0;*/
-    display: flex;
-    justify-content: center;
-    position: relative;
-}
-
-.ivy-form:not(:last-child) {
-    margin-bottom: 1.5rem;
-}
-
-.ivy-form--wrapper {
-  padding: 2rem 0;
-  width: 90%;
-}
-
-.table__wrapper {
-  overflow-x: auto;
-}
-
-.title {
-  line-height: 2 !important;
-}
-.subtitle {
-  font-size: 1.75rem !important;
-  line-height: 1.5 !important;
-}
-.hero.is-dark .subtitle {
-  color: #888 !important;
-}
-
+// sass vars / bulma vars
 
 @import '~bulma/bulma';
+
+@import 'ivy';
