--- a/app/javascripts/components/application/award/style.scss
+++ b/app/javascripts/components/application/award/style.scss
@@ -4,20 +4,47 @@ $award--border-color: #eaeaea;
   padding-bottom: 2rem;
 }
 
+.award__share-link {
+  background: rgba(0, 0, 0, 0.09);
+  border-radius: 100px;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.0);
+  color: white;
+  height: 44px;
+  padding: 12px 16px 12px 12px;
+  position: absolute;
+  right: 2vmax;
+  top: 2vmax;
+  transition: 0.1s;
+  width: 44px;
+}
+
+.award__share-link:hover {
+  background: rgba(0, 0, 0, 0.2);
+  box-shadow: 1px 1px 0 0 rgba(0, 0, 0, 0.3);
+  color: white;
+}
+
 .award__image {
+  display: inline-block;
   margin: 0 0 2rem 0;
   max-width: 300px;
-  display: inline-block;
+  position: relative;
+  transition: 0.6s;
+  top: -20px;
+}
+
+.award__image.is-animating {
+  top: 0;
 }
 
 .award__title {
-  font-size: 4vmin;
+  font-size: 4.5vmin;
   letter-spacing: 2px;
   text-transform: uppercase;
 }
 
 .award__subtitle {
-  font-size: 3.25vmin;
+  font-size: 3.5vmin;
   letter-spacing: 1px;
 }
 
@@ -32,11 +59,33 @@ $award--border-color: #eaeaea;
 
 .border--thick {
   border: 5px solid lighten($award--border-color, 5%);
-  // box-shadow: 8px 8px 0 0 $award--border-color;
   padding: 0.5rem;
 }
 
 .border--thin {
   border: 3px solid $award--border-color;
   padding: 5vmax;
+  position: relative;
+}
+
+
+.award__shiny {
+  position: relative;
+}
+
+.award__show-off {
+  background: linear-gradient(90deg, rgba(255,255,255, 0.3)50%, rgba(255,255,255,0.5)100%);
+  height: 400px;
+  left: -150px;
+  position: absolute;
+  transition: 0.6s;
+  transform: rotate(30deg);
+  top: -100px;
+  width: 100px;
+  z-index: 100000;
+}
+
+.award__show-off.is-animating {
+  transform: rotate(0);
+  left: 560px;
 }
