--- a/app/stylesheets/ivy.scss
+++ b/app/stylesheets/ivy.scss
@@ -8,7 +8,6 @@ h1 {
   }
 }
 
-
 .button.is-pink {
   background-color: $pink;
   border: 0;
@@ -112,10 +111,8 @@ a.navbar-link.is-active {
 }
 
 
+// Might not need any of this:
 .tilt-root {
-  // background: red;
-  // height: 700px;
-  // width: 700px;
   transform-style: preserve3d;
 }
 
