--- a/app/javascripts/components/application/award/style.scss
+++ b/app/javascripts/components/application/award/style.scss
@@ -7,21 +7,27 @@ $award--border-color: #eaeaea;
 .award__share-link {
   background: rgba(0, 0, 0, 0.09);
   border-radius: 100px;
-  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.0);
   color: white;
   height: 44px;
   padding: 12px 16px 12px 12px;
   position: absolute;
-  right: 2vmax;
+  right: 20px;
   top: 2vmax;
   transition: 0.1s;
   width: 44px;
 }
 
-.award__share-link:hover {
-  background: rgba(0, 0, 0, 0.2);
-  box-shadow: 1px 1px 0 0 rgba(0, 0, 0, 0.3);
+.award__edit-link {
+  background: rgba(0, 0, 0, 0.09);
+  border-radius: 100px;
   color: white;
+  height: 44px;
+  padding: 12px 16px 12px 12px;
+  position: absolute;
+  right: 74px;
+  top: 2vmax;
+  transition: 0.1s;
+  width: 44px;
 }
 
 .award__image {
@@ -74,18 +80,19 @@ $award--border-color: #eaeaea;
 }
 
 .award__show-off {
-  background: linear-gradient(90deg, rgba(255,255,255, 0.3)50%, rgba(255,255,255,0.5)100%);
-  height: 400px;
-  left: -150px;
+  background: linear-gradient(90deg, rgba(255,255,255, 0.2)50%, rgba(255,255,255,0.3)100%);
+  height: 350px;
+  left: 50px;
   position: absolute;
   transition: 0.6s;
+  transition-timing-function: ease-in;
   transform: rotate(30deg);
-  top: -100px;
-  width: 100px;
+  top: 0;
+  width: 40px;
   z-index: 100000;
 }
 
 .award__show-off.is-animating {
   transform: rotate(0);
-  left: 560px;
+  left: 500px;
 }
