* rename services to include Service in the variable title, and be more descriptive of what they are\n* Fix updateAward() to actually take in the awardID/index\n* fix the save form button so it is disabled until the user makes a change to the form\n* mess around w/ the event handlers but still haven't perfected them

--- a/app/javascripts/components/application/award-type/style.css
+++ b/app/javascripts/components/application/award-type/style.css
@@ -10,13 +10,13 @@
 .award-type.selected,
 .award-type.selected:hover,
 .award-type.selected:focus {
-  border: 3px solid #e7f4ff;
+  border: 3px solid #97f4ff;
   opacity: 1;
 }
 
 .award-type:hover,
 .award-type:focus {
-  border: 3px solid #e7e7e7;
+  border: 3px solid #c7e7ff;
   opacity: 1;
 }
 
