* fix up error handling when we don't have an award w/ the provided award ID on the blockchain

--- a/app/javascripts/components/application/award-type/style.css
+++ b/app/javascripts/components/application/award-type/style.css
@@ -10,7 +10,7 @@
 .award-type.selected,
 .award-type.selected:hover,
 .award-type.selected:focus {
-  border: 3px solid #97f4ff;
+  border: 3px solid #45bed0;
   opacity: 1;
 }
 
