--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -1,5 +1,7 @@
 // 1. Import the initial variables
-$primary: #00b1c2;
+$primary: #45bed0;
+
+$blue: $primary;
 
 $pink: #e45a98;
 $pink-two: #ff6aa8;
