--- a/app/stylesheets/ivy.scss
+++ b/app/stylesheets/ivy.scss
@@ -81,18 +81,15 @@ a.navbar-link.is-active {
 }
 
 .ivy-form {
-    background: #fcfcfc;
-    align-items: stretch;
-    /*border: 3px solid #f5f5f5;*/
-    /*border-radius: 3px;*/
-    /*border-top-left-radius: 0;*/
-    display: flex;
-    justify-content: center;
-    position: relative;
+  background: #fcfcfc;
+  align-items: stretch;
+  display: flex;
+  justify-content: center;
+  position: relative;
 }
 
 .ivy-form:not(:last-child) {
-    margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .ivy-form--wrapper {
@@ -113,6 +110,11 @@ a.navbar-link.is-active {
 .content .subtitle {
   font-size: 1.75rem;
   line-height: 1.5;
+}
+
+.subtitle a,
+.title a {
+  color: #333;
 }
 
 .hero.is-dark .subtitle {
@@ -146,4 +148,13 @@ a.navbar-link.is-active {
 
 .card {
   box-shadow: 0 0 0 rgba(10, 10, 10, 0.0);
+}
+
+.help {
+  font-size: 1.25rem;
+}
+
+.table td,
+.table th {
+  vertical-align: middle;
 }
