* add a sweet tooltip library and a tooltip hint to let the user know that inscriptions are optional and can be entered in later

--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -8,6 +8,8 @@ $pink-two: #ff6aa8;
 
 $family-primary: "futura-pt", sans-serif;
 
+@import '~react-tippy/dist/tippy.css';
+
 // 6. Import the rest of Bulma
 @import '~bulma/bulma';
 
