--- a/app/stylesheets/ivy.scss
+++ b/app/stylesheets/ivy.scss
@@ -2,6 +2,18 @@ h1 {
   font-family: 'Josefin Sans', sans-serif;
 }
 
+.ivy-tooltip {
+  background-color: white;
+  border: 1px solid #dbdbdb;
+  border-radius: 1rem;
+  color: #bcbcbc;
+  cursor: pointer;
+  display: inline-block;
+  margin: 2px 10px;
+  padding: 0.2rem 0.64rem;
+  text-align: center;
+}
+
 .ivy-button {
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.0);
 }
